--- a/app/templates/reservas.html
+++ b/app/templates/reservas.html
@@ -5,6 +5,18 @@
     <div class="card shadow-sm mb-4 border-0">
         <div class="card-body p-3">
             <form method="GET" action="{{ url_for('main.reservas') }}" class="row g-3 align-items-center">
+                {% if current_user.is_admin %}
+                <div class="col-md-auto">
+                    <select name="sede_filtro" class="form-select" onchange="this.form.submit()">
+                        <option value="">-- Todas las Sedes --</option>
+                        {% for sede in sedes %}
+                            <option value="{{ sede.id }}" {% if sede.id == sede_actual_id %}selected{% endif %}>
+                                {{ sede.nombre }}
+                            </option>
+                        {% endfor %}
+                    </select>
+                </div>
+                {% endif %}
                 <div class="col-md-auto">
                     <button type="button" class="btn btn-primary-custom" data-bs-toggle="modal" data-bs-target="#modalNuevaReserva">
                         <i class="bi bi-plus-circle me-1"></i> Nuevo
@@ -61,8 +73,22 @@
                                         {{ res.estado }}
                                     </span>
                                 </td>
-                                <td>
-                                    <button class="btn btn-sm btn-outline-primary" title="Editar"><i class="bi bi-pencil"></i></button>
+                                <td class="text-end">
+                                    <button type="button" 
+                                            class="btn btn-sm btn-outline-info me-1" 
+                                            data-bs-toggle="modal" 
+                                            data-bs-target="#modalVerReserva"
+                                            data-id="{{ res.id }}"
+                                            title="Ver Detalles">
+                                        <i class="bi bi-eye"></i>
+                                    </button>
+
+                                    <button type="button" 
+                                            class="btn btn-sm btn-outline-warning btn-editar-reserva" 
+                                            data-id="{{ res.id }}"
+                                            title="Editar">
+                                        <i class="bi bi-pencil"></i>
+                                    </button>
                                 </td>
                             </tr>
                             {% endfor %}
