--- a/app/templates/abonos.html
+++ b/app/templates/abonos.html
@@ -22,7 +22,7 @@
                 <div class="col-md-auto">
                     <!-- Botón Nuevo (morado) -->
                     <button type="button" class="btn btn-primary-custom" data-bs-toggle="modal" data-bs-target="#modalNuevoAbono">
-                        <i class="bi bi-plus-circle me-1"></i> Nuevo Abono
+                        <i class="bi bi-plus-circle me-1"></i> Nuevo
                     </button>
                 </div>
                 <div class="col-md">
