--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <title>{% block title %}{{ title }}{% endblock %} - Lúdicus Park</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?v=2"">
 </head>
 <body>
     {% from "_formhelpers.html" import render_field %}
@@ -54,13 +54,36 @@
                         <a href="#" class="nav-link disabled" tabindex="-1" aria-disabled="true">Reportes</a>
                     </li>
 
-                    <hr>
-                    <li class="nav-item">
-                        <a href="{{ url_for('main.admin_adicionales') }}" 
-                           class="nav-link {% if 'admin' in request.endpoint %}active{% endif %}">
-                            <i class="bi bi-gear-wide-connected me-2"></i> Administrar
+                    {% if current_user.is_admin %}
+                    <hr class="text-white-50 my-2 mx-3">
+
+                    <li class="nav-item mb-2">
+                        <a href="#submenuAdmin" data-bs-toggle="collapse" aria-expanded="true" class="nav-link text-white dropdown-toggle d-flex align-items-center justify-content-between">
+                            <span><i class="bi bi-gear-fill me-2"></i> Administración</span>
                         </a>
+
+                        <ul class="collapse list-unstyled fw-normal pb-1 small ms-4 
+                                {% if 'admin_' in request.endpoint %}show{% endif %}" 
+                            id="submenuAdmin" data-bs-parent="#sidebar-wrapper">
+                            
+                            <li class="nav-item">
+                                <a href="{{ url_for('main.admin_adicionales') }}" class="nav-link text-white {% if 'admin_adicionales' in request.endpoint %}active bg-white bg-opacity-10{% endif %} rounded mb-1">
+                                    <i class="bi bi-tags me-2"></i> Adicionales
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="{{ url_for('main.admin_sedes') }}" class="nav-link text-white {% if 'admin_sedes' in request.endpoint %}active bg-white bg-opacity-10{% endif %} rounded mb-1">
+                                    <i class="bi bi-geo-alt me-2"></i> Sedes
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="{{ url_for('main.admin_usuarios') }}" class="nav-link text-white {% if 'admin_usuarios' in request.endpoint %}active bg-white bg-opacity-10{% endif %} rounded mb-1">
+                                    <i class="bi bi-people me-2"></i> Usuarios
+                                </a>
+                            </li>
+                        </ul>
                     </li>
+                    {% endif %}
                 </ul>
 
                 <hr>
@@ -387,7 +410,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                     
-                    <button type="button" class="btn btn-primary-custom" onclick="window.print()">
+                    <button type="button" class="btn btn-primary-custom" id="btnImprimirContrato">
                         <i class="bi bi-printer me-2"></i> Imprimir
                     </button>
                 </div>
@@ -501,7 +524,9 @@
     </script>
 
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-    
+
+    <iframe id="iframeImpresion" style="display:none;"></iframe>
+  
     {% block scripts %}
     {% endblock %}
 </body>
